# Crop_disease_detection

./: .gitignore  PROJECT_EXPLANATION.md  README.md  augment_wheat_healthy.py  database_setup.py  database_setup_enhanced.py  diff.txt  download_wheat_dataset.py  model_training.ipynb  pyproject.toml  requirements.txt  temp_urls.txt  test_api.py  test_prediction.py  tomato_model_training.ipynb  urls.json  urls.txt  urls_test.txt  wheat_model_training.ipynb
Ml_Models/: maize_class_indices.json  wheat_class_indices.json
database/: crop_disease.db
scripts/: augment_tomato_healthy.py  augment_tomato_unhealthy.py  download_others_data.py  download_tomato_others.py  update_notebook.py
src/: app.py  auth_app.py  data_preprocessing.py  download_datasets.py  inference.py  mandi.py  model_training.py  quick_train.py  simple_model_training.py  train_maize.py  yield_predictor.py
templates/: amazon_dashboard.html  index.html
